--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   background-position: right bottom;
   transition: all 0.5s ease-out;
   color: #44b2e5;
+  cursor: pointer;
 }
 .reachout:hover {
   background-position: left bottom;
@@ -205,8 +206,8 @@
 .reachouttext:hover{
   color: white;
 
-.aapp_scro::-webkit-scrollbar{
-  display: none;
+/* .aapp_scro::-webkit-scrollbar{
+  display: none; */
   
 
 }
